src/main/java/com/opswat/part3/ANTLR4/SimpleScript.g4
grammar SimpleScript;

script: command+ EOF;

command
    : PRINT STRING
    | ADD NUMBER NUMBER
    | SUBTRACT NUMBER NUMBER
    | EXIT
    ;

PRINT: 'print';
ADD: 'add';
SUBTRACT: 'subtract';
EXIT: 'exit';

STRING: '"' (~["\\])* '"';
NUMBER: [0-9]+;

WS: [ \t\r\n]+ -> skip;
